reorganization of files

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     
-    <link rel="stylesheet" href="assets/">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Horiseon Homepage</title>
 </head>
 
@@ -35,7 +35,7 @@
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
-            <img alt="Picture of " src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img alt="a-picture-of-someone-working-at-a-computer-while-looking-at-their-phone" src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
